css/home.css
/* ... */
#about p {
    color: #666666;
    margin: 0 auto;
    font-size: 1.15em;
    letter-spacing: 0.03em;
    line-height: 1.4em;
    font-weight: 300;
    max-width: 40em;
    text-align: center;
}

#about img {
    min-width: 20em;
    min-height: 10em;
    max-width: 50em;
    max-height: 30em;
    padding: 2.5px;
    border: .20em solid #2d2d2d;
}


/* For the youtube video, responsive embedding */

#about .embed-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
    max-width: 100%;
}

#about .embed-container iframe,
.embed-container object,
.embed-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding: 2.5px;
    border: .20em solid #2d2d2d;
}

#interests {
    padding-top: 70px;
    padding-bottom: 105px;
    background: white;
    position: relative;
    text-align: center;
    border-color: white;
    position: relative;
}

#interests h1 {
    margin-bottom: 35px;
    font-size: 2em;
    font-weight: 300;
    letter-spacing: 4px;
    color: #282828;
    font-family: Papyrus, fantasy;
    text-transform: none;
    font-style: italic;
}

#interests .bold {
    font-weight: 600;
}

#interests a {
    color: black;
    padding-bottom: 2px;
    border-bottom: 1px solid black;
}

#interests a:hover {
    border-bottom: 1px dashed black;
}

#interests i {
    font-size: 3em;
    color: #737373;
}

#interests .row:last-child {
    border-top: 1px solid #ebebeb;
}

#interests .row .column {
    padding: 30px;
    border-left: 1px solid #ebebeb;
}

#interests .row .column:first-of-type {
    border-left: none;
}

#interests h3 {
    font-weight: 400;
    color: #4c4c4c;
    letter-spacing: 0.2em;
    font-size: 1.4em;
    padding-bottom: 10px;
    font-family: Papyrus, fantasy;
    font-style: italic;
    text-transform: none;
}

#interests p {
    color: #595959;
    max-width: 380px;
    padding-top: 10px;
    padding-bottom: 10px;
    font-size: 1.2em;
    letter-spacing: 1px;
    font-weight: 300;
    /*font-size: 15px;*/
    line-height: 25px;
    text-align: center;
    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
}

#interests .dash {
    background: lightgray;
}

#contact {
    padding-top: 120px;
    padding-bottom: 200px;
    position: relative;
    border-color: whitesmoke;
    background: whitesmoke;
    text-align: center;
}

#contact i {
    font-size: 2.5em;
}

#contact h1 {
    color: #282828;
    font-size: 2em;
    font-family: Papyrus, fantasy;
    font-style: italic;
    font-weight: 300;
    text-transform: none;
    letter-spacing: 4px;
    margin: 10px 0 20px;
}

#contact h1 div {
    display: inline-block;
}

#contact p {
    font-size: 1.15em;
    font-weight: 300;
    letter-spacing: 0.5px;
    margin: 30px auto 35px;
    line-height: 25px;
    max-width: 500px;
    color: #666666;
    text-transform: none;
    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
}

#contact h3 {
    color: #666666;
    font-size: 1.15em;
    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
    font-style: none;
    font-weight: 300;
    text-transform: none;
    letter-spacing: 1px;
    margin: 10px 0 20px;
}

#contact a {
    font-size: 1em;
    font-weight: 300;
    letter-spacing: 1px;
    color: #666666;
    text-transform: none;
    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
}

#contact a.contact {
    padding: 8px 15px;
    border: 1px solid lightgray;
    border-radius: 3px;
    font-size: 1.4em;
    font-weight: 300;
    letter-spacing: 1px;
    color: #282828;
}

#contact a.contact i {
    margin-left: 10px;
    font-size: 20px;
}

#contact a:hover {
    color: #282828;
}

#footer {
    padding: 65px 0 150px;
    background: #ffffff;
    text-align: center;
    font-weight: 300;
}

#footer h1 {
    color: #282828;
    font-size: 2em;
    font-family: Papyrus, fantasy;
    font-style: italic;
    font-weight: 300;
    text-transform: none;
    letter-spacing: 4px;
    margin: 10px 0 20px;
    margin-top: -25px;
}

#footer h4 {
    margin-bottom: 25px;
}

#footer ul {
    list-style: none;
}

#footer ul li {
    display: inline-block;
    min-width: 50px;
    min-height: 75px;
    margin: 0 10px;
    padding: 0 10px;
    position: relative;
}


/* color of the icons before hover state */

#footer ul li a {
    color: #bdbdbd;
}

#footer ul li a i {
    font-size: 2em;
}

#footer ul li a p {
    position: absolute;
    font-weight: 400;
    letter-spacing: 1px;
    display: none;
    left: 0;
    right: 0;
    margin: auto;
    margin-top: 10px;
    color: inherit;
}

#footer ul .target:hover a {
    color: #e60000;
}

#footer ul .amazon:hover a {
    color: #00004d;
}

#footer .dash {
    background-color: #424242;
}


/* for the font at the bottom */

#footer .license {
    font-family: Papyrus, fantasy;
    font-style: italic;
    color: #282828;
    letter-spacing: 1px;
    font-size: 11px;
    margin-top: 45px;
    margin-bottom: -135px;
}

#footer .license a {
    color: inherit;
    padding-bottom: 3px;
    border-bottom: 1px dotted #bdbdbd;
}

#footer .license a:hover {
    border-bottom: 1px solid #bdbdbd;
}

.sink,
#introduction .chevron .down {
    display: inline-block;
    -webkit-transition-duration: 0.3s;
    transition-duration: 0.3s;
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transform: translateZ(0);
    transform: translateZ(0);
    box-shadow: 0 0 1px transparent;
}

.sink:hover,
#introduction .chevron .down:hover,
.sink:focus,
#introduction .chevron .down:focus,
.sink:active,
#introduction .chevron .down:active {
    -webkit-transform: translateY(5px);
    transform: translateY(5px);
}

